compiler/tests/fixtures/valid/saliences_elif.viv
// Saliences `for` block with elif branches

action assess-risk:
    roles:
        @assessor:
            as: initiator
        @subject:
            as: recipient
    saliences:
        default: #BORING
        for _@c:
            if _@c.trust > 70:
                #CRITICAL
            elif _@c.trust > 30:
                #INTERESTING
            else:
                #BORING
            end
        end
