compiler/tests/fixtures/invalid/semantics/salience_variable_shadows_role.viv
// Invalid: saliences variable shadows role name

action shadow-sal:
    roles:
        @actor:
            as: initiator
        @target:
            as: recipient
    saliences:
        for _@actor:
            #HIGH
        end
